Fri Feb 22 17:05:42 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-deployment.sql:
        
          Bug fix where the foreign key (test_number) prevented 
          the deletion of a test because its ON DELETE was set to 
          RESTRICT instead of CASCADE.

Fri Feb 22 15:12:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:
        * etc/SQL/CUTS-performance.sql:

          Re-implemented the stored procedures that calculate a
          component instance's cumulative, delta, and percentage
          error.

Thu Feb 21 20:22:45 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/utils:

          Location of MDE utilities for CUTS.

Thu Feb 21 07:13:08 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/install.dat:

          Removed this file.

Thu Feb 21 07:09:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/modelin/picmlin.mpc:
        * etc/config/cuts_gme.mpb:

          Fixed the static build of the CUTS connector.

Thu Feb 21 06:25:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/modelin/picmlin.mwc:

          New workspace for building the CUTS connector for NAOMI. This
          build uses static versions of its dependencies, i.e., ACE and
          GME.

Thu Feb 21 06:03:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS.mwc:
        * cuts_common.mwb:
        * cuts_modeling.mwb:

          Refactored the main workspace into reuseable base workspaces.

        * CUTS_CoSMIC.mwc:

          Removed this file.

Thu Feb 21 06:00:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-performance.sql:

          Rename of the CUTS-execution.sql file.

        * etc/config/requires_modeling.mpb:

          New base project that adds 'requires += modeling' to a
          concrete project.
